tests/ui/inference/erase-type-params-in-label.stderr
error[E0283]: type annotations needed
  --> $DIR/erase-type-params-in-label.rs:2:15
   |
LL |     let foo = foo(1, "");
   |               ^^^ cannot infer type of the type parameter `W` declared on the function `foo`
   |
   = note: cannot satisfy `_: Default`
note: required by a bound in `foo`
  --> $DIR/erase-type-params-in-label.rs:25:17
   |
LL | fn foo<T, K, W: Default, Z: Default>(t: T, k: K) -> Foo<T, K, W, Z> {
   |                 ^^^^^^^ required by this bound in `foo`
help: consider specifying the generic arguments
   |
LL |     let foo = foo::<i32, &str, W, Z>(1, "");
   |                  +++++++++++++++++++

error[E0283]: type annotations needed
  --> $DIR/erase-type-params-in-label.rs:5:15
   |
LL |     let bar = bar(1, "");
   |               ^^^ cannot infer type of the type parameter `Z` declared on the function `bar`
   |
   = note: cannot satisfy `_: Default`
note: required by a bound in `bar`
  --> $DIR/erase-type-params-in-label.rs:14:17
   |
LL | fn bar<T, K, Z: Default>(t: T, k: K) -> Bar<T, K, Z> {
   |                 ^^^^^^^ required by this bound in `bar`
help: consider specifying the generic arguments
   |
LL |     let bar = bar::<i32, &str, Z>(1, "");
   |                  ++++++++++++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0283`.
